Fix line break on market with three emojis

--- a/src/typescript/frontend/src/app/global.css
+++ b/src/typescript/frontend/src/app/global.css
@@ -30,14 +30,14 @@
 .med-pixel-text {
   font-size: 20px !important;
   line-height: 25px;
-  font-family: var(--font-pixelar);
+  font-family: var(--font-pixelar) !important;
 }
 
 @media screen and (min-width: 768px) {
   .med-pixel-text {
     font-size: 22px !important;
     line-height: 27px;
-    font-family: var(--font-pixelar);
+    font-family: var(--font-pixelar) !important;
   }
 }
 
@@ -45,7 +45,7 @@
   .med-pixel-text {
     font-size: 24px !important;
     line-height: 30px;
-    font-family: var(--font-pixelar);
+    font-family: var(--font-pixelar) !important;
   }
 }
 
@@ -53,7 +53,7 @@
   .med-pixel-text {
     font-size: 32px !important;
     line-height: 40px;
-    font-family: var(--font-pixelar);
+    font-family: var(--font-pixelar) !important;
   }
 }
 
